# stockfish-rs

./: .rustfmt.toml  Cargo.toml  build.rs  release.toml
.github/workflows/: rust.yml
src/: bitboard.rs  command_line.rs  lib.rs  macros.rs  main.rs  types.rs
src/bitboard/: fast.rs  magic.rs  mod.rs  slow.rs
src/misc/: mod.rs  prng.rs
src/types/: color.rs  direction.rs  file.rs  mod.rs  piece_type.rs  rank.rs  square.rs
stockfish-core/: CHANGELOG.md  Cargo.toml  README.md
stockfish-core/benches/: accelerate.rs
stockfish-core/src/: accelerate.rs  arch.rs  bitboard.rs  color.rs  core.rs  direction.rs  file.rs  hash.rs  lib.rs  misc.rs  rank.rs  square.rs
stockfish-core/src/accelerate/: cached.rs  computed.rs
stockfish-core/src/bitboard/: iter.rs  magic.rs  powerset.rs
stockfish-core/src/core/: board.rs  castling.rs  color.rs  direction.rs  file.rs  move.rs  piece.rs  rank.rs  ruleset.rs  square.rs  token.rs
stockfish-core/src/core/castling/: castling_path.rs  castling_rights.rs  castling_side.rs  castling_variety.rs
stockfish-core/src/hash/: zobrist.rs
stockfish-core/src/misc/: prng.rs
stockfish-game/: Cargo.toml
stockfish-game/src/: lib.rs  position.rs
stockfish-game/src/position/: fen.rs
