[package]
name    = 'stockfish-rs'
license = 'GPL-3.0-only'
version = '0.1.0'
edition = '2021'

description = 'Rust reimplementation of the Stockfish chess engine'
categories  = ['games']
keywords    = ['chess', 'chess-engine']

readme        = 'README.md'
homepage      = 'https://crates.io/crates/stockfish-rs'
repository    = 'https://github.com/stouset/stockfish-rs'
documentation = 'https://docs.rs/stockfish-rs'

[dependencies]
bytemuck = { version = '1', features = ["derive", "min_const_generics"] }
color-eyre = '0.6'
constmuck  = '0'

[build-dependencies]
bytemuck = { version = '1', features = ["derive", "min_const_generics"] }
