[package]
name    = 'stockfish-core'
version = '0.0.0'

readme      = 'README.md'
description = 'Core types for implementing a fast chess engine'

homepage      = 'https://crates.io/crates/stockfish-core'
documentation = 'https://docs.rs/stockfish-core'

edition.workspace    = true
authors.workspace    = true
license.workspace    = true
categories.workspace = true
keywords.workspace   = true
repository.workspace = true

[dependencies]
paste = '1'
