[package]
name    = 'stockfish-core'
version = '0.0.0'

readme      = 'README.md'
description = 'Core types for implementing a fast chess engine'

homepage      = 'https://crates.io/crates/stockfish-core'
documentation = 'https://docs.rs/stockfish-core'

edition.workspace    = true
authors.workspace    = true
license.workspace    = true
categories.workspace = true
keywords.workspace   = true
repository.workspace = true

[[bin]]
name              = 'stockfish-accelerate'
required-features = ['unaccelerated']

[features]
default       = []
unaccelerated = ['bytemuck']

[dependencies]
bytemuck = { version = '1', optional = true, features = ['derive', 'extern_crate_alloc'] }
paste    = '1'

