[package]
name    = 'stockfish-core'
version = "0.1.0"

readme      = 'README.md'
description = 'Core types for implementing a fast chess engine'

homepage      = 'https://crates.io/crates/stockfish-core'
documentation = 'https://docs.rs/stockfish-core'

edition.workspace    = true
authors.workspace    = true
license.workspace    = true
categories.workspace = true
keywords.workspace   = true
repository.workspace = true

[[bin]]
name = 'stockfish-accelerate'

[features]
default       = []
unaccelerated = []

[dependencies]
bitflags = '1'
bytemuck = { version = '1', features = ['extern_crate_alloc', 'min_const_generics'] }

[dev-dependencies]
criterion = { version = '0.4', features = ['html_reports'] }

[[bench]]
name = 'accelerate'
harness = false
